<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="time">Time</string>
    <string name="app_name">AutoTextRespone</string>
    <string name="forTime">For</string>
    <string name="upTo">Up to</string>
    <string name="message">Response message</string>
    <string name="sendEmail">Send e-mail too</string>
    <string name="answer_frequency">Answer Interval</string>
    <string name="set_up_to_time">Set up to time</string>
    <string name="set_time_duration">Set time duration</string>
    <string name="event">event</string>
    <string name="min">m</string>
    <string name="hour">h</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="eachTime1">Answer</string>
    <string name="eachTime2">each time</string>
    <string name="intervalF1">Select how often respond to each caller.</string>
    <string name="oneAnswerPer">One answer per</string>
    <string name="location">Add location</string>
    <string name="activated_till">Actived till</string>
    <string name="clockIcon">clockIcon</string>
    <string name="x_h_y_min">Xh Ymin</string>
    <string name="fifteen">15min</string>
    <string name="activated">Activated</string>
    <string name="deactivated">Deactivated</string>
    <string name="forTimeIconDesc">forTimeIcon</string>
    <string name="action_settings">Action Settings todo</string>

    <string name="enableGpsQM">Enable GPS?</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>

    <string name="x">X</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="dialog_no_message">Message field is empty</string>
    <string name="go_back_and_write">OK</string>
    <string name="dialog_no_message_msg">Please write a message to replay</string>
    <string name="dialog_no_message_title">No message to repay</string>

</resources>
