<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <RelativeLayout
            android:id="@+id/Main_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:textColor="#000">

        <RelativeLayout
                android:id="@+id/Main_Time_Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp"
                android:background="@drawable/block_time_red"
                android:paddingBottom="7dp">

            <TextView
                    android:id="@+id/Main_Time_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/time"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:textStyle="bold"/>

            <LinearLayout
                    android:id="@+id/Main_Time_Choose_Layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/Main_Time_TextView"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:background="@drawable/block_white"
                    android:weightSum="2"
                    android:baselineAligned="false">

                <RelativeLayout
                        android:id="@+id/Main_Time_FOR_Layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="1"
                        android:visibility="visible"
                        android:paddingBottom="10dp">

                    <RelativeLayout
                            android:id="@+id/main_time_for_icon_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center">

                        <ImageView
                                android:id="@+id/forTime_Icon_ImageView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:paddingBottom="6dp"
                                android:paddingRight="6dp"
                                android:paddingTop="6dp"
                                android:src="@drawable/for_time"
                                android:contentDescription="@string/forTimeIconDesc"/>

                        <TextView
                                android:id="@+id/MAIN_Time_TextView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_toRightOf="@+id/forTime_Icon_ImageView"
                                android:text="@string/forTime"
                                android:textColor="#111"
                                android:textSize="30sp"/>
                    </RelativeLayout>

                    <TextView
                            android:id="@+id/textView1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_below="@+id/main_time_for_icon_text"
                            android:layout_marginLeft="5dp"
                            android:gravity="center_horizontal"
                            android:text="@string/set_time_duration"

                            android:textColor="#333"/>
                </RelativeLayout>

                <RelativeLayout
                        android:id="@+id/Main_Time_UPTO_Layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="selectedUpToTime"
                        android:visibility="visible"
                        android:paddingBottom="10dp">

                    <RelativeLayout
                            android:id="@+id/main_time_up_to_icon_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal">

                        <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:paddingBottom="6dp"
                                android:paddingRight="6dp"
                                android:paddingTop="6dp"
                                android:src="@drawable/up_to_time"
                                android:contentDescription="@string/clockIcon"/>

                        <TextView
                                android:id="@+id/MAIN_Time_TextView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_toRightOf="@+id/imageView2"
                                android:text="@string/upTo"
                                android:textColor="#111"
                                android:textSize="30sp"/>
                    </RelativeLayout>

                    <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_below="@+id/main_time_up_to_icon_text"
                            android:layout_marginLeft="5dp"
                            android:gravity="center"
                            android:text="@string/set_up_to_time"
                            android:textColor="#333"/>
                </RelativeLayout>

                <RelativeLayout
                        android:id="@+id/Main_Time_Selected"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:visibility="gone">

                    <TextView
                            android:id="@+id/Main_Time_Selected_textView_Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:text="@string/activated_till"
                            android:textColor="#ff0000"
                            android:layout_margin="5dp"
                            android:textSize="25sp"/>

                    <TextView
                            android:id="@+id/Main_Time_Selected_textView_Time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentRight="true"
                            android:layout_below="@+id/Main_Time_Selected_textView_Title"
                            android:text="@string/x_h_y_min"
                            android:layout_margin="5dp"
                            android:textColor="#ff0000"
                            android:textSize="25sp"/>

                    <TextView
                            android:id="@+id/Main_Time_Selected_textView_X"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            android:text="@string/x"
                            android:layout_marginRight="5dp"/>

                </RelativeLayout>

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/Main_Message_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/Main_Time_Layout"
                android:layout_margin="5dp"
                android:background="@drawable/block_msg_yellow">

            <TextView
                    android:id="@+id/Main_Message_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:paddingBottom="5dp"
                    android:paddingLeft="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/message"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:textStyle="bold"/>

            <EditText
                    android:id="@+id/Main_Message_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_alignParentLeft="true"

                    android:layout_below="@+id/Main_Message_TextView"
                    android:layout_margin="7dp"
                    android:gravity="top"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:nextFocusDown="@+id/checkBox_add_location" />



            <CheckBox
                    android:id="@+id/checkBox_add_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:layout_below="@+id/Main_Message_EditText"
                    android:checked="false"/>

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/Main_Answer_Frequency_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/Main_Message_layout"
                android:layout_margin="5dp"
                android:background="@drawable/block_freq_blue"
                android:paddingBottom="7dp">

            <TextView
                    android:id="@+id/Main_Answer_Frequency_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:paddingBottom="7dp"
                    android:paddingLeft="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/answer_frequency"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:textStyle="bold"/>

            <RelativeLayout
                    android:id="@+id/Main_Answer_Frequency_det_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Main_Answer_Frequency_TextView"
                    android:layout_marginBottom="7dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:background="@drawable/block_white">

                <TextView
                        android:id="@+id/Main_Answer_Frequency_F1_textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center_horizontal"
                        android:layout_margin="5dp"
                        android:text="@string/intervalF1"
                        android:textColor="#333"
                        android:textSize="14sp"/>

                <TextView
                        android:id="@+id/Main_Answer_Frequency_DESC_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/Main_Answer_Frequency_F1_textView1"
                        android:layout_margin="5dp"
                        android:paddingTop="6dp"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"

                        android:text="@string/oneAnswerPer"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000"/>

                <TextView
                        android:id="@+id/Main_Answer_Frequency_NUMBER_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/Main_Answer_Frequency_DESC_textView"
                        android:layout_alignBottom="@+id/Main_Answer_Frequency_DESC_textView"
                        android:layout_toRightOf="@+id/Main_Answer_Frequency_DESC_textView"
                        android:text="@string/fifteen"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ff0000"/>

                <SeekBar
                        android:id="@+id/Main_Answer_Frequency_SeekBar1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/Main_Answer_Frequency_DESC_textView"
                        android:layout_margin="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="6dp"/>
            </RelativeLayout>
        </RelativeLayout>

        <ToggleButton
                android:id="@+id/Main_ACTIVATE_ToggleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/Main_Answer_Frequency_layout"
                android:layout_margin="5dp"

                android:textOff="@string/deactivated"
                android:textOn="@string/activated"/>
    </RelativeLayout>

</ScrollView>